syntax = "proto3";

package service;

message ServiceInfo {
  string serviceName = 1;
  string host = 2;
  int32 port = 3;
}

message GetServicesReq {}

message ServicesListRes {
  repeated ServiceInfo services = 1;
}

message FindServerReq {
  string serviceName = 1;
}

message SingleServerRes {
  ServiceInfo server = 1;
}

service Registry {
  rpc getServices(GetServicesReq) returns (ServicesListRes);
  rpc findServer(FindServerReq) returns (SingleServerRes);
}